--- a/style/form.css
+++ b/style/form.css
@@ -11,6 +11,9 @@ form.search input[type=text] {
 	width: 200px;
 	border: .06em solid black;
 	border-radius: .25em;
+	margin: .12em 0;
+	padding: .25em .5em;
+	font-size: 1.2em;
 	}
 
 /*
