--- a/style/form.css
+++ b/style/form.css
@@ -8,7 +8,7 @@
  * Search
  ************/
 form.search input[type=text] {
-	width: 200px;
+	width: 100%;
 	border: .06em solid black;
 	border-radius: .25em;
 	margin: .12em 0;
@@ -43,7 +43,7 @@ form
 input[type=text],
 input[type=password],
 input[type=date] {
-	width: 200px;
+	/* width: 200px; */
 }
 
 form textarea {
