--- a/style/rwd.css
+++ b/style/rwd.css
@@ -42,6 +42,23 @@
 	.col-s-10 {width: 83.33%;}
 	.col-s-11 {width: 91.66%;}
 	.col-s-12 {width: 100%;}
+	body {font-size: 16px;}
+	div.rwd {display: inline;}
+	.float-left {
+		display: inline-block;
+		float: left;
+	}
+	.float-right {
+		display: inline-block;
+		float: right;
+	}
+	.button {
+		display: inline-block;
+		width: auto;
+	}
+	form.search input[type=text] {
+		width: auto;
+	}
 }
 
 /* For desktop */
@@ -59,4 +76,11 @@
 	.col-11 {width: 91.66%;}
 	.col-12 {width: 100%;}
 	.flex-container {flex-wrap: nowrap;}
+	
+}
+
+/* Images */
+img.rwd {
+	max-width: 100%;
+	height: auto;
 }
