--- a/style/rwd.css
+++ b/style/rwd.css
@@ -8,6 +8,7 @@
 * {box-sizing: border-box;}
 
 /* clearfix */
+.block {padding: .25em;}
 .block::after {
 	content: "";
 	clear: both;
@@ -20,12 +21,37 @@
 	flex-direction: row;
 	flex-wrap: wrap;
 }
+.flex-container div {
+	align-self: center;
+}
 
 /* For mobile phones */
 [class*="col-"] {
 	width: 100%;
 	float: left;
-	padding: .5em;
+}
+
+/* For tablets */
+@media only screen and (min-width: 300px) {
+	.button {
+		display: inline-block;
+		width: auto;
+	}
+	.float-left {
+		display: inline-block;
+		float: left;
+	}
+	.float-right {
+		display: inline-block;
+		float: right;
+	}
+	div.rwd {display: inline;}
+	
+	
+	form.search input[type=text] {
+		width: auto;
+	}
+	
 }
 
 /* For tablets */
@@ -43,22 +69,7 @@
 	.col-s-11 {width: 91.66%;}
 	.col-s-12 {width: 100%;}
 	body {font-size: 16px;}
-	div.rwd {display: inline;}
-	.float-left {
-		display: inline-block;
-		float: left;
-	}
-	.float-right {
-		display: inline-block;
-		float: right;
-	}
-	.button {
-		display: inline-block;
-		width: auto;
-	}
-	form.search input[type=text] {
-		width: auto;
-	}
+	
 }
 
 /* For desktop */
@@ -77,10 +88,4 @@
 	.col-12 {width: 100%;}
 	.flex-container {flex-wrap: nowrap;}
 	
-}
-
-/* Images */
-img.rwd {
-	max-width: 100%;
-	height: auto;
 }
