--- a/style/general.css
+++ b/style/general.css
@@ -14,8 +14,10 @@ body {
 	font-family: Tahoma, Geneva, sans-serif;
 	max-width: 100%;
 	margin: auto;
-	font-size: 10px;
+	padding: .25em;
 }
+
+hr {margin: .12em 0;}
 
 /* Images */
 img {
