--- a/style/containers.css
+++ b/style/containers.css
@@ -4,21 +4,12 @@
  * Containers
  *********************************************************/
 
-/* Card */
-.card {
+.card, .unit {
 	background: rgb(245, 245, 245);
 	border: .06em solid;
 	border-radius: .5em;
 	padding: .5em;
 	margin: .12em;
-	box-shadow: 0 .25em .5em 0 rgba(0, 0, 0, 0.2), 0 .3em 1.2em 0 rgba(0, 0, 0, 0.19);
 }
 
-/* Unit */
-.unit {
-	background: rgb(245, 245, 245);
-	border: .06em solid;
-	border-radius: .25em;
-	padding: .5em;
-	margin: .12em;
-}
+.card {box-shadow: 0 .25em .5em 0 rgba(0, 0, 0, 0.2), 0 .3em 1.2em 0 rgba(0, 0, 0, 0.19);}
