--- a/style/form.css
+++ b/style/form.css
@@ -4,9 +4,29 @@
  * Forms
  *********************************************************/
 
+/*
+ * General
+ ************/
+
+form {overflow:auto;}
+
+input, select, textarea {
+	padding: .25em;
+	border: .06em solid black;
+	border-radius: .25em;
+	width: 100%;
+}
+
+textarea {
+	height: 5em;
+	resize: none;
+}
+
+input:required, select:required {border-color: red;}
+
 /* Search */
 form.search {overflow:initial;}
-form.search input {
+form.search input[type=search] {
 	border-color: black;
 	font-size: 1.2em;
 	width: 100%;
@@ -18,36 +38,3 @@ form.search input {
 
 /* Login */
 form.login input {border-color: black;}
-
-/*
- * General
- ************/
-
-form {overflow:auto;}
-
-input[type=text],
-input[type=password],
-input[type=date],
-input[type=search],
-form select,
-form textarea {
-	padding: .25em;
-	border: .06em solid black;
-	border-radius: .25em;
-}
-input:required, select:required {border: 0.06em solid red;}
-
-form
-input[type=text],
-input[type=password],
-input[type=date],
-textarea {
-	width: 100%;
-}
-
-form textarea {
-	height: 5em;
-	resize: none;
-}
-
-form input[type=checkbox] {padding: .25em;}
