--- a/style/general.css
+++ b/style/general.css
@@ -10,7 +10,7 @@
 
 /* Body */
 body {
-	background: rgb(245, 245, 245);
+	background: hsl(0, 0%, 96%);
 	font-family: Tahoma, Geneva, sans-serif;
 	margin: auto;
 	padding: .25em;
@@ -68,11 +68,11 @@ h1, h2, h3, h4, h5 {margin: .5em 0;}
 }
 @media only screen and (min-width: 350px) {
 	.float-left {
-		display: inline-block;
+		display: block;
 		float: left;
 	}
 	.float-right {
-		display: inline-block;
+		display: block;
 		float: right;
 	}
 }
@@ -86,3 +86,7 @@ h1, h2, h3, h4, h5 {margin: .5em 0;}
 
 /* Hover */
 .hover {visibility: hidden;}
+
+/* Overflow */
+.of-auto {overflow: auto;}
+.of-vis {overflow: visible;}
