--- a/style/rwd.css
+++ b/style/rwd.css
@@ -14,13 +14,15 @@
 	display: table;
 }
 
-/* For mobile phones */
+/*
+ * Grid layout
+ ************/
+
 [class*="col-"] {
 	width: 100%;
 	float: left;
 }
 
-/* For tablets */
 @media only screen and (min-width: 500px) {
 	.col-s-1 {width: 8.33%;}
 	.col-s-2 {width: 16.66%;}
@@ -34,10 +36,8 @@
 	.col-s-10 {width: 83.33%;}
 	.col-s-11 {width: 91.66%;}
 	.col-s-12 {width: 100%;}
-	
 }
 
-/* For desktop */
 @media only screen and (min-width: 768px) {
 	.col-1 {width: 8.33%;}
 	.col-2 {width: 16.66%;}
