--- a/style/table.css
+++ b/style/table.css
@@ -11,8 +11,6 @@ table {border-collapse: collapse;}
  * Form tables
  *******************/
 
-table.form {overflow: auto;}
-
 table.form th,
 table.form td {
 	display: block;
@@ -38,7 +36,10 @@ table.form caption {
  * Compound details
  *******************/
 
-table.comp_det {overflow: auto;}
+table.comp_det tbody {
+	border-left: .06em solid black;
+	border-right: .06em solid black;
+}
 
 table.comp_det caption {
 	background: wheat;
@@ -68,24 +69,22 @@ table.comp_det tr:nth-child(even) {background: rgb(235, 235, 235);}
  * Lists
  *******************/
 
-table.list tbody {
-	border-left: .06em solid black;
-	border-right: .06em solid black;
-}
-
-table.list>thead>tr>th {
+table.list thead th {
 	background: wheat;
 	padding: .25em .5em;
 	font-weight: normal;
 }
-table.list>thead>tr{border-bottom: .15em solid black;}
+table.list>thead>tr {border-bottom: .15em solid black;}
 table.list>thead>tr>th:first-child {border-radius: .5em 0 0 0;}
 table.list>thead>tr>th:last-child {border-radius: 0 .5em 0 0;}
 
-table.list>tbody>tr>td {
-	border-bottom: .06em solid black;
-	padding: .25em;
+table.list tbody td {padding: .25em;}
+
+table.list tbody {
+	border-left: .06em solid black;
+	border-right: .06em solid black;
 }
+table.list tbody tr:nth-child(odd) {border-bottom: .06em solid black;}
 
 table.list>tbody>tr:nth-child(4n+3) {background: rgb(235, 235, 235);}
 table.list>tbody>tr:nth-child(odd):hover>td {background: yellow;}
@@ -102,7 +101,7 @@ table.change_details thead th {
 	border-bottom: .12em solid black;
 }
 table.change_details tbody td {
-	min-width: 200px;
+	min-width: 130px;
 	word-break: break-word;
 	border: .06em solid black;
 	padding: 0 .25em;
