--- a/style/table.css
+++ b/style/table.css
@@ -74,9 +74,9 @@ table.list thead th {
 	padding: .25em .5em;
 	font-weight: normal;
 }
-table.list>thead>tr {border-bottom: .15em solid black;}
-table.list>thead>tr>th:first-child {border-radius: .5em 0 0 0;}
-table.list>thead>tr>th:last-child {border-radius: 0 .5em 0 0;}
+table.list thead tr {border-bottom: .15em solid black;}
+table.list thead tr th:first-child {border-radius: .5em 0 0 0;}
+table.list thead tr th:last-child {border-radius: 0 .5em 0 0;}
 
 table.list tbody td {padding: .25em;}
 
@@ -84,10 +84,10 @@ table.list tbody {
 	border-left: .06em solid black;
 	border-right: .06em solid black;
 }
-table.list tbody tr:nth-child(odd) {border-bottom: .06em solid black;}
+table.list>tbody>tr:nth-child(odd) {border-bottom: .06em solid black;}
 
 table.list>tbody>tr:nth-child(4n+3) {background: rgb(235, 235, 235);}
-table.list>tbody>tr:nth-child(odd):hover>td {background: yellow;}
+table.list>tbody>tr:nth-child(odd):hover {background: yellow;}
 
 table.list>tbody>tr:hover>td>*>* {visibility: visible;}
 
