--- a/style/button.css
+++ b/style/button.css
@@ -62,6 +62,15 @@ button.delete, button.close {
 	border-color: hsl(0, 100%, 20%);
 }
 
+/* Barcode */
+button.barcode {
+	font-family: "Lucida Console", Monaco, monospace;
+	padding: .5em;
+	border: .12em solid;
+	background-color: hsl(0, 0%, 90%);
+	cursor: pointer;
+}
+
 /* Hovers */
 button.menu:hover,
 button.category:hover,
@@ -73,6 +82,10 @@ button.selected:hover,
 button.restart:hover {background-color: hsl(210, 100%, 46%);}
 button.delete:hover,
 button.close:hover {background-color: hsl(0, 100%, 40%);}
+button.barcode:hover {
+	background-color: hsl(0, 0%, 80%);
+	text-decoration: underline;
+}
 
 /* Links */
 a:link, a:visited {
